# workflow-use

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
extension/: components.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  wxt.config.ts
extension/src/entrypoints/: content.ts  (+1 more)
src/builder/: cli.py  prompts.py  service.py
src/controller/: service.py  utils.py
src/executor/: prompts.py  service.py
src/schema/: views.py
src/workflow/: service.py
ui/: index.html  package-lock.json  package.json  tsconfig.json
ui/src/: App.tsx  index.css  jsonToFlow.ts  nodes.ts  types.ts
workflows/: cli.py  pyproject.toml
workflows/backend/: api.py  routers.py  service.py  views.py
workflows/src/backend/: api.py
workflows/src/builder/: prompts.py  service.py
workflows/src/controller/: service.py
workflows/src/recorder/: recorder.py  service.py  views.py
workflows/src/schema/: views.py
workflows/src/workflow/: prompts.py  service.py
workflows/src/workflow/tests/: run_workflow.py
workflows/workflow_use/builder/: prompts.py  service.py
workflows/workflow_use/builder/tests/: build_workflow.py
workflows/workflow_use/controller/: service.py  utils.py  views.py
workflows/workflow_use/mcp/: service.py
workflows/workflow_use/mcp/tests/: test_tools.py
workflows/workflow_use/recorder/: recorder.py  service.py  views.py
workflows/workflow_use/schema/: views.py
workflows/workflow_use/workflow/: prompts.py  service.py  views.py
workflows/workflow_use/workflow/tests/: run_workflow.py  test_extract.py
(+46 files in other folders)
