[project]
name = "workflow-use"
version = "0.1.0"
description = "Create, edit, run deterministic workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.1.46",
    "fastapi>=0.115.12",
    "typer>=0.15.3",
    "uvicorn>=0.34.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.8",
]
